--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,6 +10,12 @@
     <tr>
       <td> <%= article.title %> </td> 
       <td> <%= article.description %> </td>
+      <td> <%= link_to 'Edit', edit_article_path(article) %> </td>
+      <td> <%= link_to 'Show', article_path(article) %> </td>
     </tr>
   <% end %>
 </table>
+
+<p>
+  <%= link_to 'Add new article', new_article_path %>
+</p>
