--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,3 +3,8 @@
 <p>Title: <%= @article.title %></p>
 
 <p>Description:  <%= @article.description %>
+
+<p>
+  <%= link_to 'Return to articles listing', articles_path %>  |  
+  <%= link_to 'Edit this article', edit_article_path(@article) %>
+</p>
